<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/app_card"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:foreground="?android:attr/selectableItemBackground"
	android:layout_margin="5dp">

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_margin="8dp"
		android:layout_height="wrap_content">

		<ImageView
			android:id="@+id/appIcon"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:adjustViewBounds="true"
			android:layout_gravity="center"
			android:layout_margin="4dp"
			android:maxWidth="50dp"
			android:maxHeight="50dp"
			android:contentDescription="@string/content_description_default"
			android:src="@drawable/ic_app"/>

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_marginStart="8dp"
			android:layout_height="wrap_content">

			<TextView
				android:id="@+id/appName"
				android:fontFamily="sans-serif-condensed-medium"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/title_app"
				android:ellipsize="end"
				android:layout_margin="2dp"
				android:singleLine="true"
				android:textSize="@dimen/font_size_large"/>

			<TextView
				android:id="@+id/appApk"
				android:fontFamily="sans-serif-thin"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="2dp"
				android:text="@string/title_package"
				android:textSize="@dimen/font_size_medium"/>

		</LinearLayout>

	</LinearLayout>

</android.support.v7.widget.CardView>