<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.AppBarLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/appBarLayout"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@android:color/transparent"
	android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

	<android.support.design.widget.CollapsingToolbarLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:contentScrim="?attr/colorPrimary"
		app:layout_scrollFlags="scroll|exitUntilCollapsed">

		<LinearLayout
			android:id="@+id/appInfo"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="?attr/colorPrimary"
			android:clipChildren="false"
			android:clipToPadding="false"
			android:orientation="vertical"
			android:paddingBottom="24dp"
			android:paddingLeft="24dp"
			android:paddingRight="24dp"
			android:paddingTop="64dp"
			app:layout_collapseMode="parallax">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:clipChildren="false"
				android:orientation="horizontal">

				<ImageView
					android:id="@+id/appIcon"
					android:layout_width="@dimen/application_icon_size"
					android:layout_height="@dimen/application_icon_size"
					android:layout_marginEnd="@dimen/default_elevation"
					android:contentDescription="@string/content_description_default"
					android:src="@drawable/ic_android"/>

				<LinearLayout
					android:id="@+id/appDetails"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="@dimen/default_elevation"
					android:orientation="vertical">

					<TextView
						android:id="@+id/appName"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/title_app"
						android:textColor="@color/textColorPrimary"
						android:textSize="@dimen/font_size_large"/>

					<TextView
						android:id="@+id/appVersion"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/title_version"
						android:textColor="@color/textColorPrimary"
						android:textSize="@dimen/font_size_micro"/>

					<TextView
						android:id="@+id/appPackage"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/title_package"
						android:textColor="@color/textColorPrimary"
						android:textSize="@dimen/font_size_small"/>

				</LinearLayout>

			</LinearLayout>

		</LinearLayout>

		<include layout="@layout/toolbar_default"/>

	</android.support.design.widget.CollapsingToolbarLayout>

</android.support.design.widget.AppBarLayout>